fix inline list spacing

--- a/wp-content/themes/miltons-nn/scss/site/_global.scss
+++ b/wp-content/themes/miltons-nn/scss/site/_global.scss
@@ -82,6 +82,10 @@ img.alignright {
 	@include inlineCentered;
 }
 
+ul.inline-list li:first-child {
+    margin-left: 0px;
+}
+
 hr.white {
 	border-color: $white;
 }
